[package]
name = "ticktick_api"
version = "0.1.0"
edition = "2021"
description = "A Rust library for the TickTick API"
license = "MIT"
repository = "https://github.com/carlossgv/ticktick_api"

[dependencies]
reqwest = { version = "0.11.24", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "3.0.2"
rand = "0.8"
